<resources>
    <string name="app_name">MyExpWithUI</string>
    <string name="action_settings">Settings</string>
    <string name="border">Border</string>
    <string name="shape">Shape</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="color">Color</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="defaultColor">Default</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="Sign_in">Sign in</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="Loading_Complete">Loading Complete..</string>
    <string name="title_activity_content">ContentActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
