<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_drawable"
    tools:context=".activity.MainActivity">

    <com.example.monisha.myexpwithui.view.WaveView
        android:id="@+id/wave"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/content_layout"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:id="@+id/text_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center">

        <com.example.monisha.myexpwithui.view.SecretTextView
            android:id="@+id/secret_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="dAbBLe...\n\nDriBbLE...\n\nDrOoL..."
            android:textSize="30sp"
            android:textColor="@android:color/white"
            />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/selection_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_holder"
        android:visibility="gone">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/border"
        android:layout_alignBottom="@+id/border"
        android:layout_below="@+id/shape"
        android:layout_toEndOf="@+id/border"
        android:layout_toRightOf="@+id/border"
        android:max="50"
        android:progress="10"/>

    <TextView
        android:id="@+id/border"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/shape"
        android:text="@string/border"/>

    <TextView
        android:id="@+id/shape"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:text="@string/shape"/>

    <RadioGroup
        android:id="@+id/shapeChoice"
        android:layout_alignTop="@+id/shape"
        android:layout_toRightOf="@id/shape"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/shapeCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/circle"/>

        <RadioButton
            android:id="@+id/shapeSquare"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square"/>
    </RadioGroup>

    <TextView
        android:id="@+id/color"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/border"
        android:text="@string/color"/>

    <RadioGroup
        android:id="@+id/colorChoice"
        android:layout_below="@id/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/colorDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/defaultColor"/>

        <RadioButton
            android:id="@+id/colorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@color/red"
            android:text="@string/red"/>

        <RadioButton
            android:id="@+id/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@color/green"
            android:text="@string/green"/>

        <RadioButton
            android:id="@+id/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="@color/blue"
            android:text="@string/blue"/>
    </RadioGroup>
    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
